--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <quarkus.platform.version>3.8.0</quarkus.platform.version>
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.2.5</surefire-plugin.version>
+    <fj-version>8.4.9</fj-version>
+    <fj-daogen-version>1.3.3</fj-daogen-version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -48,6 +50,11 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-reactive</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.fugerit.java</groupId>
+      <artifactId>fj-core</artifactId>
+      <version>${fj-version}</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
