--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
       <artifactId>quarkus-smallrye-openapi</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-h2</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.fugerit.java</groupId>
       <artifactId>fj-core</artifactId>
       <version>${fj-version}</version>
