--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 greeting:
   message: "hello"
+
+quarkus:
+  datasource:
+    db-kind: h2
+    jdbc:
+      driver: org.h2.Driver
+      url: jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;MODE=Oracle;INIT=RUNSCRIPT FROM './src/test/resources/h2init/init.sql';
+
