--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,10 @@
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.2.5</surefire-plugin.version>
     <fj-version>8.4.9</fj-version>
-    <fj-daogen-version>1.3.3</fj-daogen-version>
+    <fj-daogen-version>1.3.4</fj-daogen-version>
+    <build-helper-maven-plugin-version>3.4.0</build-helper-maven-plugin-version>
+    <gen.base.dir>${project.basedir}</gen.base.dir>
+    <generated.source.daogen>target/generated-sources/daogen</generated.source.daogen>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -57,6 +60,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-agroal</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-h2</artifactId>
     </dependency>
     <dependency>
@@ -72,6 +79,12 @@
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.fugerit.java</groupId>
+      <artifactId>fj-daogen-base</artifactId>
+      <version>${fj-daogen-version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -129,6 +142,43 @@
             <maven.home>${maven.home}</maven.home>
           </systemPropertyVariables>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.fugerit.java</groupId>
+        <artifactId>fj-daogen-maven-plugin</artifactId>
+        <version>${fj-daogen-version}</version>
+        <executions>
+          <execution>
+            <id>daogen</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <daogenConfig>${project.basedir}/src/main/daogen/daogen-config.xml</daogenConfig>
+          <genBaseDir>${gen.base.dir}</genBaseDir>
+          <generatedSourceHelper>${generated.source.daogen}</generatedSourceHelper>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${gen.base.dir}/${generated.source.daogen}</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
