--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,7 @@ quarkus:
       driver: org.h2.Driver
       url: jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;INIT=RUNSCRIPT FROM './src/test/resources/h2init/init.sql';
 
+"%prod":
+    datasource:
+      jdbc:
+        url: jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;INIT=RUNSCRIPT FROM '/deployments/h2init/init.sql';
