--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,19 @@
+"%dev":
+
+  quarkus:
+
+    log:
+      level: TRACE
+      min-level: TRACE
+
+"%prod":
+
+  quarkus:
+
+    log:
+      level: INFO
+      min-level: DEBUG
+
 greeting:
   message: "hello"
 
@@ -8,8 +24,3 @@ quarkus:
     jdbc:
       driver: org.h2.Driver
       url: jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;INIT=RUNSCRIPT FROM './src/test/resources/h2init/init.sql';
-
-"%prod":
-    datasource:
-      jdbc:
-        url: jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;INIT=RUNSCRIPT FROM '/deployments/h2init/init.sql';
