--- a/src/main/resources/daogen-reflect-config.json
+++ b/src/main/resources/daogen-reflect-config.json
@@ -195,6 +195,15 @@
   }, {
     "name" : "getIdFather",
     "parameterTypes" : [ ]
+  }, {
+    "name" : "getMother",
+    "parameterTypes" : [ ]
+  }, {
+    "name" : "getFather",
+    "parameterTypes" : [ ]
+  }, {
+    "name" : "getOwndocuments",
+    "parameterTypes" : [ ]
   } ]
 }, {
   "name" : "org.fugerit.java.daogen.quickstart.impl.helper.HelperPerson",
@@ -222,6 +231,15 @@
   }, {
     "name" : "getIdFather",
     "parameterTypes" : [ ]
+  }, {
+    "name" : "getMother",
+    "parameterTypes" : [ ]
+  }, {
+    "name" : "getFather",
+    "parameterTypes" : [ ]
+  }, {
+    "name" : "getOwndocuments",
+    "parameterTypes" : [ ]
   } ]
 }, {
   "name" : "org.fugerit.java.daogen.quickstart.impl.helper.WrapperPerson",
@@ -248,6 +266,15 @@
     "parameterTypes" : [ ]
   }, {
     "name" : "getIdFather",
+    "parameterTypes" : [ ]
+  }, {
+    "name" : "getMother",
+    "parameterTypes" : [ ]
+  }, {
+    "name" : "getFather",
+    "parameterTypes" : [ ]
+  }, {
+    "name" : "getOwndocuments",
     "parameterTypes" : [ ]
   } ]
 } ]
