--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <build-helper-maven-plugin-version>3.4.0</build-helper-maven-plugin-version>
     <gen.base.dir>${project.basedir}</gen.base.dir>
     <generated.source.daogen>target/generated-sources/daogen</generated.source.daogen>
+    <lombok-version>1.18.30</lombok-version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -70,6 +71,12 @@
       <groupId>org.fugerit.java</groupId>
       <artifactId>fj-core</artifactId>
       <version>${fj-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok-version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
