--- a/src/main/docker/Dockerfile.native-micro
+++ b/src/main/docker/Dockerfile.native-micro
@@ -23,8 +23,13 @@ RUN chown 1001 /work \
     && chmod "g+rwX" /work \
     && chown 1001:root /work
 COPY --chown=1001:root target/*-runner /work/application
+RUN mkdir /work/src
+RUN mkdir /work/src/test/
+RUN mkdir /work/src/test/resources/
+RUN mkdir /work/src/test/resources/h2init
+COPY src/test/resources/h2init/* /work/src/test/resources/h2init/
 
 EXPOSE 8080
 USER 1001
 
-ENTRYPOINT ["./application", "-Dquarkus.http.host=0.0.0.0"]
+ENTRYPOINT ["./application", "-Dquarkus.http.host=0.0.0.0","-Dfile.encoding=UTF-8","-Duser.timezone=UTC"]
