--- a/.github/workflows/docker_publish_native_amd64.yml
+++ b/.github/workflows/docker_publish_native_amd64.yml
@@ -57,7 +57,7 @@ jobs:
         uses: docker/build-push-action@master
         with:
           context: .
-          file: src/main/docker/Dockerfile.corretto-jvm.native
+          file: src/main/docker/Dockerfile.native-micro
           platforms: linux/amd64
           push: true
           tags: fugeritorg/fj-daogen-quarkus-demo:${{ github.ref_name }}-amd64native,fugeritorg/fj-daogen-quarkus-demo:latest-amd64native
