fj-daogen-version set to 1.7.0
virtual field example

--- a/src/main/resources/daogen-reflect-config.json
+++ b/src/main/resources/daogen-reflect-config.json
@@ -223,13 +223,16 @@
     "name" : "getIdFather",
     "parameterTypes" : [ ]
   }, {
+    "name" : "getVirtualNote",
+    "parameterTypes" : [ ]
+  }, {
     "name" : "getMother",
     "parameterTypes" : [ ]
   }, {
     "name" : "getFather",
     "parameterTypes" : [ ]
   }, {
-    "name" : "getOwndocuments",
+    "name" : "getOwnedDocuments",
     "parameterTypes" : [ ]
   }, {
     "name" : "isEmpty",
@@ -262,13 +265,16 @@
     "name" : "getIdFather",
     "parameterTypes" : [ ]
   }, {
+    "name" : "getVirtualNote",
+    "parameterTypes" : [ ]
+  }, {
     "name" : "getMother",
     "parameterTypes" : [ ]
   }, {
     "name" : "getFather",
     "parameterTypes" : [ ]
   }, {
-    "name" : "getOwndocuments",
+    "name" : "getOwnedDocuments",
     "parameterTypes" : [ ]
   }, {
     "name" : "isEmpty",
@@ -301,13 +307,16 @@
     "name" : "getIdFather",
     "parameterTypes" : [ ]
   }, {
+    "name" : "getVirtualNote",
+    "parameterTypes" : [ ]
+  }, {
     "name" : "getMother",
     "parameterTypes" : [ ]
   }, {
     "name" : "getFather",
     "parameterTypes" : [ ]
   }, {
-    "name" : "getOwndocuments",
+    "name" : "getOwnedDocuments",
     "parameterTypes" : [ ]
   }, {
     "name" : "isEmpty",
