--- a/.github/workflows/docker_publish_native_amd64.yml
+++ b/.github/workflows/docker_publish_native_amd64.yml
@@ -12,52 +12,19 @@ on:
     types: [published]
 
 jobs:
-  docker:
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-
-      - uses: actions/checkout@main
+      - uses: fugerit-org/psychic-actions/maven-container-publish@mcp
         with:
-          # Shallow clones should be disabled for a better relevancy of analysis
-          fetch-depth: 0
-
-      - name: Echo ref name trigger
-        run: echo ${{ github.ref_name }}
-
-      - uses: graalvm/setup-graalvm@main
-        with:
-          java-version: '22-ea'
-          distribution: 'graalvm'
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          native-image-job-reports: 'true'
-
-      - name: Cache Maven packages
-        uses: actions/cache@main
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Build and analyze
-        run: mvn install -Dnative -Dquarkus.native.container-build=true
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@master
-        
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@master
-        
-      - name: Login to Docker Hub
-        uses: docker/login-action@master
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
-      - name: Build and push
-        uses: docker/build-push-action@master
-        with:
-          context: .
-          file: src/main/docker/Dockerfile.native-micro
-          platforms: linux/amd64
-          push: true
-          tags: fugeritorg/fj-daogen-quarkus-demo:${{ github.ref_name }}-amd64native,fugeritorg/fj-daogen-quarkus-demo:latest-amd64native
+          java-type: 'native'
+          java-distribution: 'graalvm'
+          java-version: '22-ea'
+          maven-options: 'clean package -Dnative -Dquarkus.native.container-build=true'
+          docker-file: './src/main/docker/Dockerfile.native-micro'
+          docker-platforms: linux/amd64
+          docker-tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{github.event.repository.name}}:${{ github.ref_name }}-amd64native,${{ secrets.DOCKERHUB_USERNAME }}/${{github.event.repository.name}}:latest-amd64native
+          dockerhub-username: ${{ secrets.DOCKERHUB_USERNAME }}
+          dockerhub-password: ${{ secrets.DOCKERHUB_TOKEN }}
